re PR libfortran/25419 (gfortran read does not take comma for default on one entry)

2005-12-28  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/25419
	* io/list_read.c (list_formatted_read_scalar): Allow comma to return a
	null value (default).

From-SVN: r109099